Yeni dosya ve alertler eklendi.

--- a/hesabim-ring-sell.html
+++ b/hesabim-ring-sell.html
@@ -197,164 +197,152 @@
     </div>
   </div>
   <div class="col-md-9">
-    <!-- Alertler -->
-    <div class="alert alert-success" role="alert">
-      This is a success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-      This is a danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-      This is a warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-      This is a info alert—check it out!
-    </div>
-    <!-- Alertler END-->
     <div class="account-page-content">
-    <div class="account-page-index">
-        <div class="account-page-index-top-statistics">
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item">
-              <span>Kullanılabilir Bakiye</span>
-              <h3>100.00₺</h3>
-              <a href="#">Bakiye Yükle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-2">
-              <span>Toplam Alışveriş</span>
-              <h3>1.000.00₺</h3>
-              <a href="#">Siparişlerimi Görüntüle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-3">
-              <span>Toplam Para Çekimi</span>
-              <h3>10.000.00₺</h3>
-              <a href="#">Para Çek</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-4">
-              <span>Toplam Satış</span>
-              <h3>100.00₺</h3>
-              <a href="#">Satış & İlanlarım</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
+      <div class="account-item-ring-sell">
+        <div class="form-group col-6 col-6-left">
+          <span>Sunucu</span>
+            <select name="">
+              <option value="">Seçim </option>
+              <option value="Agartha">Agartha </option>
+              <option value="Felis">Felis </option>
+              <option value="Pandora">Pandora </option>
+              <option value="Zero">Zero </option>
+              <option value="Dryads">Dryads </option>
+              <option value="Minark">Minark </option>
+              <option value="Destan">Destan </option>
+              <option value="Oreads">Oreads </option>
+              <option value="Zion">Zion</option>
+            </select>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-support-title">
-            <h3><img src="assets/images/icons/support.png" alt="">Destek Taleplerim</h3>
-          </div>
-          <div class="account-page-index-support">
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <div class="account-page-index-support-all"><a data-toggle="tab" href="#ticket_list">Tümünü Görüntüle</a></div>
-          </div>
+        <div class="form-group col-6">
+          <span>Irk</span>
+          <select>
+            <option>Human/Karus?</option>
+            <option>Human</option>
+            <option>Karus</option>
+          </select>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-notifications-title">
-            <h3><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt="">Bildirimlerim</h3>
-          </div>
-          <div class="account-page-index-notifications">
-            <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Önce banka havale, eft ya da fast ile ödeme göndermeli; ardından bildirim geçmelisiniz.</p>
-              <a href="#">Ödeme Yap sayfasına git!</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <a href="#">Knight Online 2000 Cash Kodları görüntülemek için tıklayınız</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Kredi Karti ile yapmis oldugunuz 1137 liralik odemeniz hesabiniza eklendi.</p>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <div class="account-page-index-notifications-all">
-              <a data-toggle="tab" href="#notifications">Tümünü Görüntüle</a>
-             </div>
-          </div>
+        <div class="form-group col-6 col-6-left">
+          <span>Level</span>
+          <select name="Level">
+            <option value="">Level ? </option>
+            <option value="8315">83 Reb+15 </option>
+            <option value="8314">83 Reb+14 </option>
+            <option value="8313">83 Reb+13 </option>
+            <option value="8312">83 Reb+12 </option>
+            <option value="8311">83 Reb+11 </option>
+            <option value="8310">83 Reb+10 </option>
+            <option value="839">83 Reb+9 </option>
+            <option value="838">83 Reb+8 </option>
+            <option value="837">83 Reb+7 </option>
+            <option value="836">83 Reb+6 </option>
+            <option value="835">83 Reb+5 </option>
+            <option value="834">83 Reb+4 </option>
+            <option value="833">83 Reb+3 </option>
+            <option value="832">83 Reb+2 </option>
+            <option value="831">83 Reb+1 </option>
+            <option value="83">83 </option>
+            <option value="82">82 </option>
+            <option value="81">81 </option>
+            <option value="80">80 </option>
+            <option value="79">79 </option>
+            <option value="78">78 </option>
+            <option value="77">77 </option>
+            <option value="76">76 </option>
+            <option value="75">75 </option>
+            <option value="74">74 </option>
+            <option value="73">73 </option>
+            <option value="72">72 </option>
+            <option value="71">71 </option>
+            <option value="70">70 </option>
+            <option value="69">69 </option>
+            <option value="68">68 </option>
+            <option value="67">67 </option>
+            <option value="66">66 </option>
+            <option value="65">65 </option>
+            <option value="64">64 </option>
+            <option value="63">63 </option>
+            <option value="62">62 </option>
+            <option value="61">61 </option>
+            <option value="60">60 </option>
+            <option value="59">59 </option>
+            <option value="58">58 </option>
+            <option value="57">57 </option>
+            <option value="56">56 </option>
+            <option value="55">55 </option>
+            <option value="54">54 </option>
+            <option value="53">53 </option>
+            <option value="52">52 </option>
+            <option value="51">51 </option>
+            <option value="50">50</option>
+          </select>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-sales-activity-title">
-            <h3><img src="assets/images/icons/bar-chart-white.png" alt="">Satış Aktivitesi</h3>
-          </div>
-          <div class="account-page-index-sales-activity">
-            <ul>
-              <li>
-                <span><img src="assets/images/icons/pie-chart-white.png" alt=""></span>
-                <strong>Toplam Ürünler</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/shopping-online-white.png" alt=""></span>
-                <strong>Toplam Satışlar</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/bar-chart-white.png" alt=""></span>
-                <strong>Toplam Gelir</strong>
-                <p>10.000.00₺</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/view-white.png" alt=""></span>
-                <strong>Müşteri Ziyaretleri</strong>
-                <p>20 Görüntüleme</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/writing-white.png" alt=""></span>
-                <strong>Müşteri Değerlendirmeleri</strong>
-                <p>100 Yorum</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/store-white.png" alt=""></span>
-                <strong>Mağaza Puanınız</strong>
-                <p>4.5/10</p>
-              </li>
-            </ul>
-          </div>
+        <div class="form-group col-6">
+          <span>Level Yüzdesi</span>
+            <select name="Yüzde">
+              <option value="">Yüzde ? </option>
+              <option value="99">%99 </option>
+              <option value="98">%98 </option>
+              <option value="97">%97 </option>
+              <option value="96">%96 </option>
+              <option value="95">%95 </option>
+              <option value="94">%94 </option>
+              <option value="93">%93 </option>
+              <option value="92">%92 </option>
+              <option value="91">%91 </option>
+              <option value="90">%90 </option>
+              <option value="89">%89 </option>
+              <option value="88">%88 </option>
+              <option value="87">%87 </option>
+              <option value="86">%86 </option>
+              <option value="85">%85 </option>
+              <option value="84">%84 </option>
+              <option value="83">%83 </option>
+              <option value="82">%82 </option>
+              <option value="81">%81 </option>
+              <option value="80">%80 </option>
+              <option value="79">%79 </option>
+              <option value="78">%78 </option>
+            </select>
+        </div>
+        <div class="form-group col-6 col-6-left">
+          <span>Karakter Türünü Seçiniz</span>
+            <select name="Karakter Tür">
+              <option value=""> Karakter Türü Seçiniz </option>
+              <option value="Priest">Priest </option>
+              <option value="Mage">Mage </option>
+              <option value="Warrior">Warrior </option>
+              <option value="Rogue">Rogue </option>
+              <option value="Kurian">Kurian</option>
+            </select>
+        </div>
+        <div class="form-group col-6">
+          <span>NP <b>*1000 NP altındaki girişler 0 olarak gözükecektir.</b></span>
+          <input type="number" name="" min="1" value="1000">
+        </div>
+        <div class="form-group">
+          <span>Achievement</span>
+          <label><input type="checkbox" name="">100 DEF</label>
+          <label><input type="checkbox" name="">90 DEF</label>
+          <label><input type="checkbox" name="">40 DEF</label>
+          <label><input type="checkbox" name="">7 DEX</label>
+          <label><input type="checkbox" name="">6 DEX</label>
+          <label><input type="checkbox" name="">9 STR</label>
+          <label><input type="checkbox" name="">14 INT</label>
+        </div>
+        <div class="form-group">
+          <span>Açıklama</span>
+          <textarea placeholder="Ürün Açıklamasını Giriniz."></textarea>
+        </div>
+        <div class="form-group col-6">
+          <span>Satış Fiyatınız</span>
+          <input type="number" min="1" value="1" name="">
+        </div>
+        <div class="form-group col-6 form-total-price">
+          <span>Hesabınıza Geçecek Tutar: <b>437.5 ₺</b></span>
+        </div>
+        <div class="form-group">
+          <input type="button" value="İşlemi Başlat">
         </div>
       </div>
     </div>
