--- a/hesabim-sales-advert.html
+++ b/hesabim-sales-advert.html
@@ -197,165 +197,147 @@
     </div>
   </div>
   <div class="col-md-9">
-    <!-- Alertler -->
-    <div class="alert alert-success" role="alert">
-      This is a success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-      This is a danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-      This is a warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-      This is a info alert—check it out!
-    </div>
-    <!-- Alertler END-->
     <div class="account-page-content">
-    <div class="account-page-index">
-        <div class="account-page-index-top-statistics">
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item">
-              <span>Kullanılabilir Bakiye</span>
-              <h3>100.00₺</h3>
-              <a href="#">Bakiye Yükle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
+      <div class="account-page-sales">
+        <div class="account-page-sales-headline">
+          <div class="col-md-6">
+            <div class="account-page-sales-headline-shopping">
+              <div class="img"><img src="assets/images/shop.png"></div>
+              <h4>Birlisans</h4>
+              <span>Toplam Satış: 7</span>
+              <a href="#">Gamepintr.com/shop/birlisans</a>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-2">
-              <span>Toplam Alışveriş</span>
-              <h3>1.000.00₺</h3>
-              <a href="#">Siparişlerimi Görüntüle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
+          <div class="col-md-6">
+            <div class="account-page-sales-headline-shopping-time-new">
+              <div class="time">
+                <strong>Teslimat Saati: 🌛 08:00 - 06:00 🌛</strong>
+                <a data-toggle="tab" href="#shoping_edit">Düzenle</a>
+              </div>
+              <div class="new"><a href="hesabim-sales-advert-new.html">İlan Ekle</a></div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-3">
-              <span>Toplam Para Çekimi</span>
-              <h3>10.000.00₺</h3>
-              <a href="#">Para Çek</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
+          <div class="account-page-sales-headline-button">
+            <a href="#Teslimatlarım">Teslimatlarım</a>
+            <a href="#ilanlarım">İlanlarım</a>
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-4">
-              <span>Toplam Satış</span>
-              <h3>100.00₺</h3>
-              <a href="#">Satış & İlanlarım</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
+        </div>
+        <div class="account-page-sales-search">
+          <input type="text" name="" placeholder="İlan Ara">
+          <select>
+            <option value="last30day">Son 30 Gün</option>
+            <option value="last3mounth">Son 3 Ay</option>
+            <option value="last6mounth">Son 6 Ay</option>
+            <option value="last1year">Son 1 Yıl</option>
+            <option value="1yearago">1 Yıl Önce</option>
+            <option value="2yearago">2 Yıl Önce</option>
+          </select>
+        </div>
+        <div class="account-page-sales-status-button">
+          <a href="#"><i class="fas fa-th-large"></i>Hepsi</a>
+          <a href="#"><i class="fas fa-clock"></i>Onay Bekleyenler</a>
+          <a href="#"><i class="fas fa-check"></i>Aktif</a>
+          <a href="#"><i class="fas fa-times"></i>İptal Et / Pasif</a>
+        </div>
+        <!-- Satış İlan -->
+        <div class="account-page-sales-item">
+          <div class="img"><img src="assets/images/owl-2.jpg"></div>
+          <div class="name">
+            <h5>İlan No: #85335-5864343</h5>
+            <h6>Human - Level:83 - %16 - Warrior NP 10K</h6>
+            <p><i class="far fa-clock"></i> 18.11.2022 03:52:11</p>
+          </div>
+          <div class="status"><i class="fas fa-times"></i> Pasif</div>
+          <div class="price">
+            <p>437.5 ₺</p>
+            <p><strong>1</strong>Adet</p>
+          </div>
+          <button class="account-page-sales-item-button">Detaylar<i class="fas fa-chevron-down"></i></button>
+          <div class="account-page-sales-item-content">
+            <div class="col-md-8">
+              <div class="account-page-sales-item-content-left">
+                <h4>Human - Level:83 - %16 - Warrior NP 10K</h4>
+                <h6>Rosetta</h6>
+                <p>Yorum Sayısı: <strong>10</strong></p>
+                <p>Görüntülenme sayısı: <strong>1541</strong></p>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="account-page-sales-item-content-right">
+                <h4>İlan Zamanı: <span>29.05.2022</span></h4>
+                <button>Aktif Et</button>
+                <a href="#">Güncelleme Yap</a>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-support-title">
-            <h3><img src="assets/images/icons/support.png" alt="">Destek Taleplerim</h3>
+        <!-- Satış İlan End-->
+        <!-- Satış İlan -->
+        <div class="account-page-sales-item">
+          <div class="img"><img src="assets/images/owl-2.jpg"></div>
+          <div class="name">
+            <h5>İlan No: #85335-5864343</h5>
+            <h6>Human - Level:83 - %16 - Warrior NP 10K</h6>
+            <p><i class="far fa-clock"></i> 18.11.2022 03:52:11</p>
           </div>
-          <div class="account-page-index-support">
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
+          <div class="status"><i class="fas fa-clock"></i> Onay Bekliyor</div>
+          <div class="price">
+            <p>437.5 ₺</p>
+            <p><strong>1</strong>Adet</p>
+          </div>
+          <button class="account-page-sales-item-button">Detaylar<i class="fas fa-chevron-down"></i></button>
+          <div class="account-page-sales-item-content">
+            <div class="col-md-8">
+              <div class="account-page-sales-item-content-left">
+                <h4>Human - Level:83 - %16 - Warrior NP 10K</h4>
+                <h6>Rosetta</h6>
+                <p>Yorum Sayısı: <strong>10</strong></p>
+                <p>Görüntülenme sayısı: <strong>1541</strong></p>
+              </div>
             </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
+            <div class="col-md-4">
+              <div class="account-page-sales-item-content-right">
+                <h4>İlan Zamanı: <span>29.05.2022</span></h4>
+                <button>Aktif Et</button>
+                <a href="#">Güncelleme Yap</a>
+              </div>
             </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <div class="account-page-index-support-all"><a data-toggle="tab" href="#ticket_list">Tümünü Görüntüle</a></div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-notifications-title">
-            <h3><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt="">Bildirimlerim</h3>
+        <!-- Satış İlan End-->
+        <!-- Satış İlan -->
+        <div class="account-page-sales-item">
+          <div class="img"><img src="assets/images/owl-2.jpg"></div>
+          <div class="name">
+            <h5>İlan No: #85335-5864343</h5>
+            <h6>Human - Level:83 - %16 - Warrior NP 10K</h6>
+            <p><i class="far fa-clock"></i> 18.11.2022 03:52:11</p>
           </div>
-          <div class="account-page-index-notifications">
-            <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Önce banka havale, eft ya da fast ile ödeme göndermeli; ardından bildirim geçmelisiniz.</p>
-              <a href="#">Ödeme Yap sayfasına git!</a>
+          <div class="status"><i class="fas fa-check"></i> Aktif</div>
+          <div class="price">
+            <p>437.5 ₺</p>
+            <p><strong>1</strong>Adet</p>
+          </div>
+          <button class="account-page-sales-item-button">Detaylar<i class="fas fa-chevron-down"></i></button>
+          <div class="account-page-sales-item-content">
+            <div class="col-md-8">
+              <div class="account-page-sales-item-content-left">
+                <h4>Human - Level:83 - %16 - Warrior NP 10K</h4>
+                <h6>Rosetta</h6>
+                <p>Yorum Sayısı: <strong>10</strong></p>
+                <p>Görüntülenme sayısı: <strong>1541</strong></p>
+              </div>
             </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <a href="#">Knight Online 2000 Cash Kodları görüntülemek için tıklayınız</a>
+            <div class="col-md-4">
+              <div class="account-page-sales-item-content-right">
+                <h4>İlan Zamanı: <span>29.05.2022</span></h4>
+                <button>Aktif Et</button>
+                <a href="#">Güncelleme Yap</a>
+              </div>
             </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Kredi Karti ile yapmis oldugunuz 1137 liralik odemeniz hesabiniza eklendi.</p>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <div class="account-page-index-notifications-all">
-              <a data-toggle="tab" href="#notifications">Tümünü Görüntüle</a>
-             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-sales-activity-title">
-            <h3><img src="assets/images/icons/bar-chart-white.png" alt="">Satış Aktivitesi</h3>
-          </div>
-          <div class="account-page-index-sales-activity">
-            <ul>
-              <li>
-                <span><img src="assets/images/icons/pie-chart-white.png" alt=""></span>
-                <strong>Toplam Ürünler</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/shopping-online-white.png" alt=""></span>
-                <strong>Toplam Satışlar</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/bar-chart-white.png" alt=""></span>
-                <strong>Toplam Gelir</strong>
-                <p>10.000.00₺</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/view-white.png" alt=""></span>
-                <strong>Müşteri Ziyaretleri</strong>
-                <p>20 Görüntüleme</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/writing-white.png" alt=""></span>
-                <strong>Müşteri Değerlendirmeleri</strong>
-                <p>100 Yorum</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/store-white.png" alt=""></span>
-                <strong>Mağaza Puanınız</strong>
-                <p>4.5/10</p>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <!-- Satış İlan End-->
       </div>
     </div>
   </div>
