--- a/hesabim-shoping-edit.html
+++ b/hesabim-shoping-edit.html
@@ -197,164 +197,122 @@
     </div>
   </div>
   <div class="col-md-9">
-    <!-- Alertler -->
-    <div class="alert alert-success" role="alert">
-      This is a success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-      This is a danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-      This is a warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-      This is a info alert—check it out!
-    </div>
-    <!-- Alertler END-->
     <div class="account-page-content">
-    <div class="account-page-index">
-        <div class="account-page-index-top-statistics">
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item">
-              <span>Kullanılabilir Bakiye</span>
-              <h3>100.00₺</h3>
-              <a href="#">Bakiye Yükle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
+      <div class="account-page-shoping">
+        <div class="account-page-shoping-item">
+          <div class="col-md-4">
+            <div class="account-page-shoping-item-name">
+              <div class="img"><img src="assets/images/shop.png"></div>
+              <div class="buttons">
+                <label><input type="file" name="">Resmi Güncelle <i class="fas fa-sync-alt"></i></label>
+                <button>Resmi Sil<i class="fas fa-trash"></i></button>
+              </div>
+              <div class="name">
+                <a href="#">Birlisans</a>
+                <p>Toplam Satış: 10</p>
+              </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-2">
-              <span>Toplam Alışveriş</span>
-              <h3>1.000.00₺</h3>
-              <a href="#">Siparişlerimi Görüntüle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
+          <div class="col-md-4">
+            <div class="account-page-shoping-item-form">
+              <div class="form-group">
+                <span>Mağaza Adı</span>
+                <input type="text" name="" value="birlisans">
+              </div>
+              <div class="form-group">
+                <span>Açıklama</span>
+                <textarea name="">BirLisans Resmi Microsoft Bayisidir.</textarea>
+              </div>
+              <div class="form-group-link">
+                <span>Mağaza Link</span>
+                <strong>gamepintr.com/tr/shop/</strong>
+                <input type="text" name="" value="Birlisans">
+              </div>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-3">
-              <span>Toplam Para Çekimi</span>
-              <h3>10.000.00₺</h3>
-              <a href="#">Para Çek</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
+          <div class="col-md-4">
+            <div class="account-page-shoping-item-total-seller">
+              <span>Toplam Satışlar <i class="fas fa-money-bill-alt"></i></span>
+              <select>
+                <option value="all">Tüm Zamanlar</option>
+                <option value="last1week">Son 7 Gün</option>
+                <option value="last1month">Son 30 Gün</option>
+                <option value="last3month">Son 90 Gün</option>
+                <option value="last6month">Son 6 Ay</option>
+              </select>
+              <h4>437.5 ₺</h4>
             </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-4">
-              <span>Toplam Satış</span>
-              <h3>100.00₺</h3>
-              <a href="#">Satış & İlanlarım</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
+            <div class="account-page-shoping-item-holiday">
+              <h3>Tatil Modunu <strong>Aç</strong></h3>
+              <label>
+                <input type="checkbox" name="">
+                <span class="checkmark"></span>
+              </label>
+            </div>
+            <div class="account-page-shoping-item-form-update">
+              <button>Bilgileri Güncelle <i class="fas fa-sync-alt"></i></button>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-support-title">
-            <h3><img src="assets/images/icons/support.png" alt="">Destek Taleplerim</h3>
-          </div>
-          <div class="account-page-index-support">
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
+        <div class="account-page-shoping-hours">
+          <h3>Teslimat Saatleriniz <i class="far fa-clock"></i></h3>
+            <div class="container">
+              <select>
+                <option value="0">00:00 🌛</option>
+                <option value="1">01:00 🌛</option>
+                <option value="2">02:00 🌛</option>
+                <option value="3">03:00 🌛</option>
+                <option value="4">04:00 🌛</option>
+                <option value="5">05:00 🌛</option>
+                <option value="6">06:00 🌛</option>
+                <option value="7">07:00 ☀️</option>
+                <option value="8">08:00 ☀️</option>
+                <option value="9">09:00 ☀️</option>
+                <option value="10">10:00 ☀️</option>
+                <option value="11">11:00 ☀️</option>
+                <option value="12">12:00 ☀️</option>
+                <option value="13">13:00 ☀️</option>
+                <option value="14">14:00 ☀️</option>
+                <option value="15">15:00 ☀️</option>
+                <option value="16">16:00 ☀️</option>
+                <option value="17">17:00 ☀️</option>
+                <option value="18">18:00 ☀️</option>
+                <option value="19">19:00 🌛</option>
+                <option value="20">20:00 🌛</option>
+                <option value="21">21:00 🌛</option>
+                <option value="22">22:00 🌛</option>
+                <option value="23">23:00 🌛</option>
+              </select>
+              <span>ile</span>
+             <select>
+                <option value="0">00:00 🌛</option>
+                <option value="1">01:00 🌛</option>
+                <option value="2">02:00 🌛</option>
+                <option value="3">03:00 🌛</option>
+                <option value="4">04:00 🌛</option>
+                <option value="5">05:00 🌛</option>
+                <option value="6">06:00 🌛</option>
+                <option value="7">07:00 ☀️</option>
+                <option value="8">08:00 ☀️</option>
+                <option value="9">09:00 ☀️</option>
+                <option value="10">10:00 ☀️</option>
+                <option value="11">11:00 ☀️</option>
+                <option value="12">12:00 ☀️</option>
+                <option value="13">13:00 ☀️</option>
+                <option value="14">14:00 ☀️</option>
+                <option value="15">15:00 ☀️</option>
+                <option value="16">16:00 ☀️</option>
+                <option value="17">17:00 ☀️</option>
+                <option value="18">18:00 ☀️</option>
+                <option value="19">19:00 🌛</option>
+                <option value="20">20:00 🌛</option>
+                <option value="21">21:00 🌛</option>
+                <option value="22">22:00 🌛</option>
+                <option value="23">23:00 🌛</option>
+              </select>
+              <button>Kaydet</button>
+              <p class="account-page-shoping-hours-time">00:00 ile 01:00 = <strong>1 Saat Teslimat DAHA İYİ OLABİLİR</strong></p>
             </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <div class="account-page-index-support-all"><a data-toggle="tab" href="#ticket_list">Tümünü Görüntüle</a></div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-notifications-title">
-            <h3><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt="">Bildirimlerim</h3>
-          </div>
-          <div class="account-page-index-notifications">
-            <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Önce banka havale, eft ya da fast ile ödeme göndermeli; ardından bildirim geçmelisiniz.</p>
-              <a href="#">Ödeme Yap sayfasına git!</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <a href="#">Knight Online 2000 Cash Kodları görüntülemek için tıklayınız</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Kredi Karti ile yapmis oldugunuz 1137 liralik odemeniz hesabiniza eklendi.</p>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <div class="account-page-index-notifications-all">
-              <a data-toggle="tab" href="#notifications">Tümünü Görüntüle</a>
-             </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-sales-activity-title">
-            <h3><img src="assets/images/icons/bar-chart-white.png" alt="">Satış Aktivitesi</h3>
-          </div>
-          <div class="account-page-index-sales-activity">
-            <ul>
-              <li>
-                <span><img src="assets/images/icons/pie-chart-white.png" alt=""></span>
-                <strong>Toplam Ürünler</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/shopping-online-white.png" alt=""></span>
-                <strong>Toplam Satışlar</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/bar-chart-white.png" alt=""></span>
-                <strong>Toplam Gelir</strong>
-                <p>10.000.00₺</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/view-white.png" alt=""></span>
-                <strong>Müşteri Ziyaretleri</strong>
-                <p>20 Görüntüleme</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/writing-white.png" alt=""></span>
-                <strong>Müşteri Değerlendirmeleri</strong>
-                <p>100 Yorum</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/store-white.png" alt=""></span>
-                <strong>Mağaza Puanınız</strong>
-                <p>4.5/10</p>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
