--- a/hesabim-donate-new.html
+++ b/hesabim-donate-new.html
@@ -197,165 +197,127 @@
     </div>
   </div>
   <div class="col-md-9">
-    <!-- Alertler -->
-    <div class="alert alert-success" role="alert">
-      This is a success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-      This is a danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-      This is a warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-      This is a info alert—check it out!
-    </div>
-    <!-- Alertler END-->
     <div class="account-page-content">
-    <div class="account-page-index">
-        <div class="account-page-index-top-statistics">
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item">
-              <span>Kullanılabilir Bakiye</span>
-              <h3>100.00₺</h3>
-              <a href="#">Bakiye Yükle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
+      <div class="account-page-donate-support-add">
+        <div class="account-page-donate-support-add-title">GamepinTR Destekle Başvurusu</div>
+        <form>
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>Yayın Adresi</span>
+            <input type="text" name="" placeholder="Örn: https://twitch.tv/jahrein">
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-2">
-              <span>Toplam Alışveriş</span>
-              <h3>1.000.00₺</h3>
-              <a href="#">Siparişlerimi Görüntüle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
+          <div class="form-group">
+            <span>Sayfa Başlığı</span>
+            <input type="text" name="" placeholder="Örn: Kendine Müzisyen, Ruthless Ladies">
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-3">
-              <span>Toplam Para Çekimi</span>
-              <h3>10.000.00₺</h3>
-              <a href="#">Para Çek</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
+          <div class="form-group-support">
+            <span>Destek Adresi</span>
+            <strong>gamepintr.com/destekle/</strong>
+            <input type="text" name="" placeholder="">
           </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-4">
-              <span>Toplam Satış</span>
-              <h3>100.00₺</h3>
-              <a href="#">Satış & İlanlarım</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
+          <div class="form-group">
+            <span>Minumum Bağış Tutarı</span>
+            <select>
+              <option value="">Hiçbir Seçim Yapılmadı</option>
+              <option value="1">1 TL</option>
+              <option value="2">2 TL</option>
+              <option value="3">3 TL</option>
+              <option value="4">4 TL</option>
+              <option value="5">5 TL</option>
+              <option value="6">6 TL</option>
+              <option value="7">7 TL</option>
+              <option value="8">8 TL</option>
+              <option value="9">9 TL</option>
+              <option value="10">10 TL</option>
+              <option value="15">15 TL</option>
+              <option value="20">20 TL</option>
+              <option value="25">25 TL</option>
+              <option value="30">30 TL</option>
+              <option value="35">35 TL</option>
+              <option value="40">40 TL</option>
+              <option value="45">45 TL</option>
+              <option value="50">50 TL</option>
+              <option value="55">55 TL</option>
+              <option value="60">60 TL</option>
+              <option value="65">65 TL</option>
+              <option value="70">70 TL</option>
+              <option value="75">75 TL</option>
+              <option value="80">80 TL</option>
+              <option value="85">85 TL</option>
+              <option value="90">90 TL</option>
+              <option value="95">95 TL</option>
+              <option value="100">100 TL</option>
+            </select>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-support-title">
-            <h3><img src="assets/images/icons/support.png" alt="">Destek Taleplerim</h3>
+          <div class="form-group">
+            <span>Maxsimum Bağış Tutarı</span>
+            <select>
+              <option value="">Hiçbir Seçim Yapılmadı</option>
+              <option value="1">1 TL</option>
+              <option value="2">2 TL</option>
+              <option value="3">3 TL</option>
+              <option value="4">4 TL</option>
+              <option value="5">5 TL</option>
+              <option value="6">6 TL</option>
+              <option value="7">7 TL</option>
+              <option value="8">8 TL</option>
+              <option value="9">9 TL</option>
+              <option value="10">10 TL</option>
+              <option value="15">15 TL</option>
+              <option value="20">20 TL</option>
+              <option value="25">25 TL</option>
+              <option value="30">30 TL</option>
+              <option value="35">35 TL</option>
+              <option value="40">40 TL</option>
+              <option value="45">45 TL</option>
+              <option value="50">50 TL</option>
+              <option value="55">55 TL</option>
+              <option value="60">60 TL</option>
+              <option value="65">65 TL</option>
+              <option value="70">70 TL</option>
+              <option value="75">75 TL</option>
+              <option value="80">80 TL</option>
+              <option value="85">85 TL</option>
+              <option value="90">90 TL</option>
+              <option value="95">95 TL</option>
+              <option value="100">100 TL</option>
+            </select>
           </div>
-          <div class="account-page-index-support">
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <div class="account-page-index-support-all"><a data-toggle="tab" href="#ticket_list">Tümünü Görüntüle</a></div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-notifications-title">
-            <h3><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt="">Bildirimlerim</h3>
-          </div>
-          <div class="account-page-index-notifications">
-            <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Önce banka havale, eft ya da fast ile ödeme göndermeli; ardından bildirim geçmelisiniz.</p>
-              <a href="#">Ödeme Yap sayfasına git!</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <a href="#">Knight Online 2000 Cash Kodları görüntülemek için tıklayınız</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Kredi Karti ile yapmis oldugunuz 1137 liralik odemeniz hesabiniza eklendi.</p>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <div class="account-page-index-notifications-all">
-              <a data-toggle="tab" href="#notifications">Tümünü Görüntüle</a>
-             </div>
+          <div class="form-group">
+            <label><input type="checkbox"><a href="#">Yayıncı sözleşmesini</a>okudum,onaylıyorum.</label>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-sales-activity-title">
-            <h3><img src="assets/images/icons/bar-chart-white.png" alt="">Satış Aktivitesi</h3>
+        <div class="col-md-6">
+          <div class="form-group-right">
+            <span>Facebook Adresi</span>
+            <i class="fab fa-facebook-f"></i>
+            <input type="text" name="" placeholder="facebook.com/jahrein">
           </div>
-          <div class="account-page-index-sales-activity">
-            <ul>
-              <li>
-                <span><img src="assets/images/icons/pie-chart-white.png" alt=""></span>
-                <strong>Toplam Ürünler</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/shopping-online-white.png" alt=""></span>
-                <strong>Toplam Satışlar</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/bar-chart-white.png" alt=""></span>
-                <strong>Toplam Gelir</strong>
-                <p>10.000.00₺</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/view-white.png" alt=""></span>
-                <strong>Müşteri Ziyaretleri</strong>
-                <p>20 Görüntüleme</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/writing-white.png" alt=""></span>
-                <strong>Müşteri Değerlendirmeleri</strong>
-                <p>100 Yorum</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/store-white.png" alt=""></span>
-                <strong>Mağaza Puanınız</strong>
-                <p>4.5/10</p>
-              </li>
-            </ul>
+          <div class="form-group-right">
+            <span>Twitter Adresi</span>
+            <i class="fab fa-twitter"></i>
+            <input type="text" name="" placeholder="">
+          </div>
+          <div class="form-group-right">
+            <span>İnstagram Adresi</span>
+            <i class="fab fa-instagram"></i>
+            <input type="text" name="" placeholder="">
+          </div>
+          <div class="form-group-right">
+            <span>Pinterest Adresi</span>
+            <i class="fab fa-pinterest"></i>
+            <input type="text" name="" placeholder="">
+          </div>
+          <div class="form-group-right">
+            <span>YouTube Adresi</span>
+            <i class="fab fa-youtube"></i>
+            <input type="text" name="" placeholder="">
           </div>
         </div>
+        <div class="form-group-buttons">
+          <input type="submit" value="Başvuruyu Gönder">
+        </div>
+        </form>
       </div>
     </div>
   </div>
