--- a/hesabim-financial-history.html
+++ b/hesabim-financial-history.html
@@ -197,164 +197,132 @@
     </div>
   </div>
   <div class="col-md-9">
-    <!-- Alertler -->
-    <div class="alert alert-success" role="alert">
-      This is a success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-      This is a danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-      This is a warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-      This is a info alert—check it out!
-    </div>
-    <!-- Alertler END-->
     <div class="account-page-content">
-    <div class="account-page-index">
-        <div class="account-page-index-top-statistics">
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item">
-              <span>Kullanılabilir Bakiye</span>
-              <h3>100.00₺</h3>
-              <a href="#">Bakiye Yükle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-2">
-              <span>Toplam Alışveriş</span>
-              <h3>1.000.00₺</h3>
-              <a href="#">Siparişlerimi Görüntüle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-3">
-              <span>Toplam Para Çekimi</span>
-              <h3>10.000.00₺</h3>
-              <a href="#">Para Çek</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-4">
-              <span>Toplam Satış</span>
-              <h3>100.00₺</h3>
-              <a href="#">Satış & İlanlarım</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
+      <div class="account-page-financial-history">
+        <div class="account-page-financial-history-headline">
+          <h3>Mali Geçmişim</h3>
+          <select>
+            <option>Hepsi</option>
+            <option>Bugün</option>
+            <option>Dün</option>
+            <option>Bu Hafta</option>
+            <option>Geçen Hafta</option>
+            <option>Bu Ay</option>
+            <option>Geçen Ay</option>
+            <option>Bu Yıl</option>
+            <option>Geçen Yıl</option>
+          </select>
+          <input type="date" name="">
+          <input type="date" name="">
+          <button>Filtrele</button>
+          <button>Temizle</button>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-support-title">
-            <h3><img src="assets/images/icons/support.png" alt="">Destek Taleplerim</h3>
-          </div>
-          <div class="account-page-index-support">
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <div class="account-page-index-support-all"><a data-toggle="tab" href="#ticket_list">Tümünü Görüntüle</a></div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-notifications-title">
-            <h3><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt="">Bildirimlerim</h3>
-          </div>
-          <div class="account-page-index-notifications">
-            <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Önce banka havale, eft ya da fast ile ödeme göndermeli; ardından bildirim geçmelisiniz.</p>
-              <a href="#">Ödeme Yap sayfasına git!</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <a href="#">Knight Online 2000 Cash Kodları görüntülemek için tıklayınız</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Kredi Karti ile yapmis oldugunuz 1137 liralik odemeniz hesabiniza eklendi.</p>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <div class="account-page-index-notifications-all">
-              <a data-toggle="tab" href="#notifications">Tümünü Görüntüle</a>
-             </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-sales-activity-title">
-            <h3><img src="assets/images/icons/bar-chart-white.png" alt="">Satış Aktivitesi</h3>
-          </div>
-          <div class="account-page-index-sales-activity">
-            <ul>
-              <li>
-                <span><img src="assets/images/icons/pie-chart-white.png" alt=""></span>
-                <strong>Toplam Ürünler</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/shopping-online-white.png" alt=""></span>
-                <strong>Toplam Satışlar</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/bar-chart-white.png" alt=""></span>
-                <strong>Toplam Gelir</strong>
-                <p>10.000.00₺</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/view-white.png" alt=""></span>
-                <strong>Müşteri Ziyaretleri</strong>
-                <p>20 Görüntüleme</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/writing-white.png" alt=""></span>
-                <strong>Müşteri Değerlendirmeleri</strong>
-                <p>100 Yorum</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/store-white.png" alt=""></span>
-                <strong>Mağaza Puanınız</strong>
-                <p>4.5/10</p>
-              </li>
-            </ul>
-          </div>
+        <div class="table-responsive-sm">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Sıra</th>
+                <th scope="col">Tarih</th>
+                <th scope="col">Tür</th>
+                <th scope="col">Açıklama</th>
+                <th scope="col">Giriş</th>
+                <th scope="col">Çıkış</th>
+                <th scope="col">Bakiye</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>08.01.2022 16:10</td>
+                <td>İlan Satış</td>
+                <td>1 Adet Windows 10 Pro Lisans Kısa Sür...</td>
+                <td class="color-green">22.50₺</td>
+                <td></td>
+                <td>22.5 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>08.01.2022 16:10</td>
+                <td>Sipariş</td>
+                <td>Sipariş No : 9183842</td>
+                <td></td>
+                <td class="color-red">22.50₺</td>
+                <td>0.12 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>08.01.2022 16:10</td>
+                <td>İlan Satış</td>
+                <td>1 Adet Windows 10 Pro Lisans Kısa Sür...</td>
+                <td class="color-green">22.50₺</td>
+                <td></td>
+                <td>22.5 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>08.01.2022 16:10</td>
+                <td>Sipariş</td>
+                <td>Sipariş No : 9183842</td>
+                <td></td>
+                <td class="color-red">22.50₺</td>
+                <td>0.12 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>08.01.2022 16:10</td>
+                <td>İlan Satış</td>
+                <td>1 Adet Windows 10 Pro Lisans Kısa Sür...</td>
+                <td class="color-green">22.50₺</td>
+                <td></td>
+                <td>22.5 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>08.01.2022 16:10</td>
+                <td>Sipariş</td>
+                <td>Sipariş No : 9183842</td>
+                <td></td>
+                <td class="color-red">22.50₺</td>
+                <td>0.12 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>08.01.2022 16:10</td>
+                <td>İlan Satış</td>
+                <td>1 Adet Windows 10 Pro Lisans Kısa Sür...</td>
+                <td class="color-green">22.50₺</td>
+                <td></td>
+                <td>22.5 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>08.01.2022 16:10</td>
+                <td>Sipariş</td>
+                <td>Sipariş No : 9183842</td>
+                <td></td>
+                <td class="color-red">22.50₺</td>
+                <td>0.12 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>08.01.2022 16:10</td>
+                <td>İlan Satış</td>
+                <td>1 Adet Windows 10 Pro Lisans Kısa Sür...</td>
+                <td class="color-green">22.50₺</td>
+                <td></td>
+                <td>22.5 ₺</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>08.01.2022 16:10</td>
+                <td>Sipariş</td>
+                <td>Sipariş No : 9183842</td>
+                <td></td>
+                <td class="color-red">22.50₺</td>
+                <td>0.12 ₺</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
