--- a/hesabim-giveaways-new.html
+++ b/hesabim-giveaways-new.html
@@ -197,165 +197,234 @@
     </div>
   </div>
   <div class="col-md-9">
-    <!-- Alertler -->
-    <div class="alert alert-success" role="alert">
-      This is a success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-      This is a danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-      This is a warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-      This is a info alert—check it out!
-    </div>
-    <!-- Alertler END-->
     <div class="account-page-content">
-    <div class="account-page-index">
-        <div class="account-page-index-top-statistics">
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item">
-              <span>Kullanılabilir Bakiye</span>
-              <h3>100.00₺</h3>
-              <a href="#">Bakiye Yükle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-2">
-              <span>Toplam Alışveriş</span>
-              <h3>1.000.00₺</h3>
-              <a href="#">Siparişlerimi Görüntüle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-3">
-              <span>Toplam Para Çekimi</span>
-              <h3>10.000.00₺</h3>
-              <a href="#">Para Çek</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-4">
-              <span>Toplam Satış</span>
-              <h3>100.00₺</h3>
-              <a href="#">Satış & İlanlarım</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
+      <div class="giveaways-new-page">
+        <div class="giveaways-new-page-title">
+          <h3>Çekiliş Bilgileri</h3>
+          <span>Çekilişiniz için gerekli bilgileri özenle doldurun.</span>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-support-title">
-            <h3><img src="assets/images/icons/support.png" alt="">Destek Taleplerim</h3>
+          <div class="form-group col-6 p-r-20">
+            <span>Çekiliş başlığı girin</span>
+            <textarea name="" placeholder="Çekilişe katıl ve ...şansını yakala!"></textarea>
           </div>
-          <div class="account-page-index-support">
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <div class="account-page-index-support-all"><a data-toggle="tab" href="#ticket_list">Tümünü Görüntüle</a></div>
+          <div class="form-group col-6">
+            <span>Çekiliş görevleri girin (satır satır url)</span>
+            <textarea name="" id="" placeholder="https://"></textarea>
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-notifications-title">
-            <h3><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt="">Bildirimlerim</h3>
+          <div class="form-group col-25">
+            <span>Çekiliş Resmi Seçin</span>
+            <label><input type="file" name=""><i class="fas fa-sync-alt"></i> Resim Seç</label>
           </div>
-          <div class="account-page-index-notifications">
-            <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Önce banka havale, eft ya da fast ile ödeme göndermeli; ardından bildirim geçmelisiniz.</p>
-              <a href="#">Ödeme Yap sayfasına git!</a>
+          <div class="form-group col-25 p-r-20">
+            <span>Takip zorunlu mu?</span>
+            <select name="">
+              <option value="">Evet</option>
+              <option value="">Hayır</option>
+            </select>
+          </div>
+          <div class="form-group col-6 datetime-group">
+            <span>Çekiliş tarihi ve saati</span>
+            <input type="date">
+            <select name="">
+              <option value="">00</option>
+              <option value="">01</option>
+              <option value="">02</option>
+              <option value="">03</option>
+              <option value="">04</option>
+              <option value="">05</option>
+              <option value="">06</option>
+              <option value="">07</option>
+              <option value="">08</option>
+              <option value="">09</option>
+              <option value="">10</option>
+              <option value="">11</option>
+              <option value="">12</option>
+              <option value="">13</option>
+              <option value="">14</option>
+              <option value="">15</option>
+              <option value="">16</option>
+              <option value="">17</option>
+              <option value="">18</option>
+              <option value="">19</option>
+              <option value="">20</option>
+              <option value="">21</option>
+              <option value="">22</option>
+              <option value="">23</option>
+            </select>
+            <select name="">
+              <option value="">00</option>
+              <option value="">01</option>
+              <option value="">02</option>
+              <option value="">03</option>
+              <option value="">04</option>
+              <option value="">05</option>
+              <option value="">06</option>
+              <option value="">07</option>
+              <option value="">08</option>
+              <option value="">09</option>
+              <option value="">10</option>
+              <option value="">11</option>
+              <option value="">12</option>
+              <option value="">13</option>
+              <option value="">14</option>
+              <option value="">15</option>
+              <option value="">16</option>
+              <option value="">17</option>
+              <option value="">18</option>
+              <option value="">19</option>
+              <option value="">20</option>
+              <option value="">21</option>
+              <option value="">22</option>
+              <option value="">23</option>
+              <option value="">24</option>
+              <option value="">25</option>
+              <option value="">26</option>
+              <option value="">27</option>
+              <option value="">28</option>
+              <option value="">29</option>
+              <option value="">30</option>
+              <option value="">31</option>
+              <option value="">32</option>
+              <option value="">33</option>
+              <option value="">34</option>
+              <option value="">35</option>
+              <option value="">36</option>
+              <option value="">37</option>
+              <option value="">38</option>
+              <option value="">39</option>
+              <option value="">40</option>
+              <option value="">41</option>
+              <option value="">42</option>
+              <option value="">43</option>
+              <option value="">44</option>
+              <option value="">45</option>
+              <option value="">46</option>
+              <option value="">47</option>
+              <option value="">48</option>
+              <option value="">49</option>
+              <option value="">50</option>
+              <option value="">51</option>
+              <option value="">52</option>
+              <option value="">53</option>
+              <option value="">54</option>
+              <option value="">55</option>
+              <option value="">56</option>
+              <option value="">57</option>
+              <option value="">58</option>
+              <option value="">59</option>
+            </select>
+          </div>
+          <div class="form-group col-6 p-r-20">
+            <span>Maksimum Katılımcı (Limitsiz için 0)</span>
+            <input type="number" name="" value="0">
+          </div>
+          <div class="form-group col-6">
+            <span>Çekiliş Türü</span>
+            <select name="">
+              <option value="">Ürün Çekilişi</option>
+              <option value="">Bakiye Çekilişi</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <span>Çekiliş Hediyeleri</span>
+            <input type="text" placeholder="Ürün Ara...">
+          </div>
+          <div class="giveaways-new-content">
+            <!-- Çekiliş İtem -->
+            <div class="col-md-6">
+              <div class="giveaways-new-content-item">
+                <div class="giveaways-info">
+                  <div class="img"><img src="assets/images/bronz-key.webp" alt=""></div>
+                  <a href="#">Steam Bronz Key</a>
+                  <span>Steam Random Key - Gamepintr</span>
+                </div>
+                <div class="giveaways-button">
+                  <span>10.20₺</span>
+                  <button><i class="fas fa-times"></i></button>
+                </div>
+                <div class="giveaways-item-forms">
+                  <div class="form-group col-33 p-r-20">
+                    <span>Kazanan Sayısı</span>
+                    <input type="number" name="" value="1">
+                  </div>
+                  <div class="form-group col-33 p-r-20">
+                    <span>Adet (kazanan başına)</span>
+                    <input type="number" name="" value="1">
+                  </div>
+                  <div class="form-group col-33">
+                    <span>Tutar(₺)</span>
+                    <input type="number" name="" value="10.25" readonly>
+                  </div>                  
+                </div>
+              </div>
             </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <a href="#">Knight Online 2000 Cash Kodları görüntülemek için tıklayınız</a>
+            <!-- Çekiliş İtem END-->
+            <!-- Çekiliş İtem -->
+            <div class="col-md-6">
+              <div class="giveaways-new-content-item">
+                <div class="giveaways-info">
+                  <div class="img"><img src="assets/images/bronz-key.webp" alt=""></div>
+                  <a href="#">Steam Bronz Key</a>
+                  <span>Steam Random Key - Gamepintr</span>
+                </div>
+                <div class="giveaways-button">
+                  <span>10.20₺</span>
+                  <button><i class="fas fa-times"></i></button>
+                </div>
+                <div class="giveaways-item-forms">
+                  <div class="form-group col-33 p-r-20">
+                    <span>Kazanan Sayısı</span>
+                    <input type="number" name="" value="1">
+                  </div>
+                  <div class="form-group col-33 p-r-20">
+                    <span>Adet (kazanan başına)</span>
+                    <input type="number" name="" value="1">
+                  </div>
+                  <div class="form-group col-33">
+                    <span>Tutar(₺)</span>
+                    <input type="number" name="" value="10.25" readonly>
+                  </div>                  
+                </div>
+              </div>
             </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Kredi Karti ile yapmis oldugunuz 1137 liralik odemeniz hesabiniza eklendi.</p>
+            <!-- Çekiliş İtem END-->
+            <!-- Çekiliş İtem -->
+            <div class="col-md-6">
+              <div class="giveaways-new-content-item">
+                <div class="giveaways-info">
+                  <div class="img"><img src="assets/images/bronz-key.webp" alt=""></div>
+                  <a href="#">Steam Bronz Key</a>
+                  <span>Steam Random Key - Gamepintr</span>
+                </div>
+                <div class="giveaways-button">
+                  <span>10.20₺</span>
+                  <button><i class="fas fa-times"></i></button>
+                </div>
+                <div class="giveaways-item-forms">
+                  <div class="form-group col-33 p-r-20">
+                    <span>Kazanan Sayısı</span>
+                    <input type="number" name="" value="1">
+                  </div>
+                  <div class="form-group col-33 p-r-20">
+                    <span>Adet (kazanan başına)</span>
+                    <input type="number" name="" value="1">
+                  </div>
+                  <div class="form-group col-33">
+                    <span>Tutar(₺)</span>
+                    <input type="number" name="" value="10.25" readonly>
+                  </div>                  
+                </div>
+              </div>
             </div>
-             <!-- Bildirimlerim İtem END-->
-             <div class="account-page-index-notifications-all">
-              <a data-toggle="tab" href="#notifications">Tümünü Görüntüle</a>
-             </div>
+            <!-- Çekiliş İtem END-->
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-sales-activity-title">
-            <h3><img src="assets/images/icons/bar-chart-white.png" alt="">Satış Aktivitesi</h3>
+          <div class="giveaways-new-footer">
+            <div class="giveaways-total">
+              <span>Toplam Tutar(₺)</span>
+              <span>25.25</span>
+            </div>
+            <input type="button" value="Çekilişi Oluştur">
           </div>
-          <div class="account-page-index-sales-activity">
-            <ul>
-              <li>
-                <span><img src="assets/images/icons/pie-chart-white.png" alt=""></span>
-                <strong>Toplam Ürünler</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/shopping-online-white.png" alt=""></span>
-                <strong>Toplam Satışlar</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/bar-chart-white.png" alt=""></span>
-                <strong>Toplam Gelir</strong>
-                <p>10.000.00₺</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/view-white.png" alt=""></span>
-                <strong>Müşteri Ziyaretleri</strong>
-                <p>20 Görüntüleme</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/writing-white.png" alt=""></span>
-                <strong>Müşteri Değerlendirmeleri</strong>
-                <p>100 Yorum</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/store-white.png" alt=""></span>
-                <strong>Mağaza Puanınız</strong>
-                <p>4.5/10</p>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
     </div>
   </div>
