--- a/hesabim-payment-add.html
+++ b/hesabim-payment-add.html
@@ -197,164 +197,146 @@
     </div>
   </div>
   <div class="col-md-9">
-    <!-- Alertler -->
-    <div class="alert alert-success" role="alert">
-      This is a success alert—check it out!
-    </div>
-    <div class="alert alert-danger" role="alert">
-      This is a danger alert—check it out!
-    </div>
-    <div class="alert alert-warning" role="alert">
-      This is a warning alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert">
-      This is a info alert—check it out!
-    </div>
-    <!-- Alertler END-->
     <div class="account-page-content">
-    <div class="account-page-index">
-        <div class="account-page-index-top-statistics">
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item">
-              <span>Kullanılabilir Bakiye</span>
-              <h3>100.00₺</h3>
-              <a href="#">Bakiye Yükle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-2">
-              <span>Toplam Alışveriş</span>
-              <h3>1.000.00₺</h3>
-              <a href="#">Siparişlerimi Görüntüle</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-3">
-              <span>Toplam Para Çekimi</span>
-              <h3>10.000.00₺</h3>
-              <a href="#">Para Çek</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="account-page-index-top-statistics-item statistics-item-bg-4">
-              <span>Toplam Satış</span>
-              <h3>100.00₺</h3>
-              <a href="#">Satış & İlanlarım</a>
-              <img src="assets/images/icons/wallet-white.png" alt="">
-            </div>
-          </div>
+      <div class="account-page-payment-add">
+        <div class="account-page-payment-add-title">
+          <h3>Cüzdana Ödeme Yap</h3>
+          <p><span><i class="fas fa-wallet"></i>Cüzdan: </span><strong>100.00₺</strong></p>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-support-title">
-            <h3><img src="assets/images/icons/support.png" alt="">Destek Taleplerim</h3>
+        <div class="account-page-payment-add-price">
+          <h5 class="account-page-payment-add-price-title">Yüklemek istediğin tutarı girip seçimini yap ve ödemeye ilerle.</h5>
+          <div class="col-md-8">
+            <label for="1"><input type="radio" id="1" name="price" value="50"><span>50 ₺</span></label>
+            <label for="2"><input type="radio" id="2" name="price" value="100"><span>100 ₺</span></label>
+            <label for="3"><input type="radio" id="3" name="price" value="250"><span>250 ₺</span></label>
+            <label for="4"><input type="radio" id="4" name="price" value="500"><span>500 ₺</span></label>
+            <label for="5"><input type="radio" id="5" name="price" value="1000"><span>1000 ₺</span></label>
           </div>
-          <div class="account-page-index-support">
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <!-- Destek Talepleri İtem -->
-            <div class="account-page-index-support-item">
-              <h3>Destek ID: 21209684</h3>
-              <span>Tür: Fikir, Öneri, Şikayet</span>
-              <p>18.11.2022 03:52:11</p>
-              <p>Dosya: <b class="color-danger">Hayır</b></p>
-              <p>Durum: <b class="color-success">Cevaplandı</b></p>
-              <a href="#">Detaylı Görüntüle</a>
-            </div>
-            <!-- Destek Talepleri İtem END-->
-            <div class="account-page-index-support-all"><a data-toggle="tab" href="#ticket_list">Tümünü Görüntüle</a></div>
+          <div class="col-md-1">
+            <div class="account-page-payment-add-price-and">Veya</div>
           </div>
+          <div class="col-md-2">
+            <input type="number" name="" value="0" placeholder="Tutar">
+          </div>
+          <div class="account-page-payment-add-price-total">Ödenecek Tutar: <span>80.95₺</span></div>
         </div>
-        <div class="col-md-4">
-          <div class="account-page-index-notifications-title">
-            <h3><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt="">Bildirimlerim</h3>
-          </div>
-          <div class="account-page-index-notifications">
-            <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Önce banka havale, eft ya da fast ile ödeme göndermeli; ardından bildirim geçmelisiniz.</p>
-              <a href="#">Ödeme Yap sayfasına git!</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <a href="#">Knight Online 2000 Cash Kodları görüntülemek için tıklayınız</a>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <!-- Bildirimlerim İtem -->
-            <div class="account-page-index-notifications-item">
-              <div class="img bg-green"><img src="https://cdn.zeplin.io/5fbceed24d01a468b899c99b/assets/3B4BE147-6212-47FA-83A7-631884D10E5F.svg" alt=""></div>
-              <span>20.11.2022 19:54:48</span>
-              <p>Kredi Karti ile yapmis oldugunuz 1137 liralik odemeniz hesabiniza eklendi.</p>
-            </div>
-             <!-- Bildirimlerim İtem END-->
-             <div class="account-page-index-notifications-all">
-              <a data-toggle="tab" href="#notifications">Tümünü Görüntüle</a>
-             </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="account-page-index-sales-activity-title">
-            <h3><img src="assets/images/icons/bar-chart-white.png" alt="">Satış Aktivitesi</h3>
-          </div>
-          <div class="account-page-index-sales-activity">
-            <ul>
-              <li>
-                <span><img src="assets/images/icons/pie-chart-white.png" alt=""></span>
-                <strong>Toplam Ürünler</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/shopping-online-white.png" alt=""></span>
-                <strong>Toplam Satışlar</strong>
-                <p>13 Adet Ürün</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/bar-chart-white.png" alt=""></span>
-                <strong>Toplam Gelir</strong>
-                <p>10.000.00₺</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/view-white.png" alt=""></span>
-                <strong>Müşteri Ziyaretleri</strong>
-                <p>20 Görüntüleme</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/writing-white.png" alt=""></span>
-                <strong>Müşteri Değerlendirmeleri</strong>
-                <p>100 Yorum</p>
-              </li>
-              <li>
-                <span><img src="assets/images/icons/store-white.png" alt=""></span>
-                <strong>Mağaza Puanınız</strong>
-                <p>4.5/10</p>
-              </li>
+        <div class="account-page-payment-add-tabs">
+          <div class="container">
+            <ul class="page-draws-tabs-menu">
+              <li class="active"><a data-toggle="pill" href="#paymenthome">Kayıtlı Kartlar <span>1</span></a></li>
+              <li><a data-toggle="pill" href="#paymentmenu1">Yeni Kart</a></li>
             </ul>
           </div>
+          <div class="tab-content">
+            <div id="paymenthome" class="tab-pane fade in active">
+              <div class="account-page-payment-add-save-card">
+                <label>
+                  <input type="radio" name="card">
+                  <div class="delete"><button>Kartı Sil <i class="fas fa-trash"></i></button></div>
+                  <div class="logo">
+                    <span><img src="assets/images/denizbank.png"></span>
+                    <span><img src="assets/images/chip.png"></span>
+                  </div>
+                  <div class="number">520303 ** **** **** </div>
+                  <div class="name">Faruk Budak <span><img src="assets/images/mastercard-2.png"></span></div>
+                </label>
+                <label>
+                  <input type="radio" name="card">
+                  <div class="delete"><button>Kartı Sil <i class="fas fa-trash"></i></button></div>
+                  <div class="logo">
+                    <span><img src="assets/images/denizbank.png"></span>
+                    <span><img src="assets/images/chip.png"></span>
+                  </div>
+                  <div class="number">520303 ** **** **** </div>
+                  <div class="name">Faruk Budak <span><img src="assets/images/mastercard-2.png"></span></div>
+                </label>
+              </div>
+              <div class="account-page-payment-add-save-card-ccv">
+                <div class="container">
+                  <span>CCV Kodu</span>
+                  <input type="number" name="" placeholder="123">
+                  <button>Alışverişi Tamamla</button>
+                </div>
+              </div>
+            </div>
+            <div id="paymentmenu1" class="tab-pane fade">
+              <div class="account-page-payment-add-new">
+                <div class="container">
+                <form>
+                  <div class="form-group">
+                    <span>Kart Sahibi</span>
+                    <input type="text" name="" placeholder="Kart Sahibi">
+                  </div>
+                  <div class="form-group">
+                    <span>Kart No</span>
+                    <input type="number" name="">
+                  </div>
+                  <div class="form-group">
+                    <span>Taksit</span>
+                    <select id="" name="">
+                    <option>Tek Çekim %1.30 Komisyon</option>
+                    <option>2 Taksit (%3) Komisyon</option>
+                    <option>3 Taksit (%4) Komisyon</option>
+                    <option>4 Taksit (%5) Komisyon</option>
+                    <option>5 Taksit (%6) Komisyon</option>
+                    <option>6 Taksit (%7) Komisyon</option>
+                    <option>7 Taksit (%8) Komisyon</option>
+                    <option>8 Taksit (%9) Komisyon</option>
+                    <option>9 Taksit (%10) Komisyon</option>
+                    <option>10 Taksit (%11) Komisyon</option>
+                    <option>11 Taksit (%12) Komisyon</option>
+                    <option>12 Taksit (%13) Komisyon</option>
+                  </select>
+                  </div>
+                  <div class="form-group">
+                    <span>Ay</span>
+                    <select name="">
+                      <option value="01">01</option>
+                      <option value="02">02</option>
+                      <option value="03">03</option>
+                      <option value="04">04</option>
+                      <option value="05">05</option>
+                      <option value="06">06</option>
+                      <option value="07">07</option>
+                      <option value="08">08</option>
+                      <option value="09">09</option>
+                      <option value="10">10</option>
+                      <option value="11">11</option>
+                      <option value="12">12</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <span>Yıl</span>
+                    <select name="">
+                      <option value="2022">2022</option>
+                      <option value="2023">2023</option>
+                      <option value="2024">2024</option>
+                      <option value="2025">2025</option>
+                      <option value="2026">2026</option>
+                      <option value="2027">2027</option>
+                      <option value="2028">2028</option>
+                      <option value="2029">2029</option>
+                      <option value="2030">2030</option>
+                      <option value="2031">2031</option>
+                      <option value="2032">2032</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <span>CCV Kodu</span>
+                    <input type="number" name="">
+                  </div>
+                  <label><input type="checkbox" name=""><span></span> Sonraki ödeme için kartımı kaydet.</label>
+                  <input type="button" value="Alışverişi Tamamla">
+                </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          <ul class="account-page-payment-add-other">
+            <li><a href="#"><img src="assets/images/papara.png"><strong>%0.99 ile Öde</strong><span>(En avantajlı seçenek)</span> <i class="fas fa-chevron-right"></i></a></li>
+            <li><a href="#"><i class="fas fa-wallet"></i><strong>Maaş, Banka, Kredi Kartı ile Öde</strong> <i class="fas fa-chevron-right"></i></a></li>
+            <li><a href="#"><i class="fas fa-money-check"></i><strong>Havale, EFT ile Öde</strong> <i class="fas fa-chevron-right"></i></a></li>
+          </ul>
         </div>
       </div>
     </div>
